# optimization-rag-system

./: .gitignore  DEPLOYMENT.md  README.md  agent_orchestrator.py  build_vector_db.ipynb  env.example  langgraph.json  prompt.py  pyproject.toml  requirements.txt  retrieval_eval.md  retrieval_pipeline.py  setup.py
app/: main.py
data/: ingestion_stats.json  sources.yaml
eval/: gold_labels.jsonl
src/: __init__.py  graph.py
