[project]
name = "optimization-rag-system"
version = "0.1.0"
description = "LangGraph-based RAG agent for cloud cost optimization with retrieval and reranking"
authors = [{name = "Sarfaraz Ahmed", email = "safiibhai74@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anyio==4.11.0",
    "beautifulsoup4==4.14.2",
    "bs4==0.0.2",
    "fastapi==0.120.0",
    "huggingface-hub==0.36.0",
    "ipykernel==7.0.1",
    "ipython==9.6.0",
    "ipython_pygments_lexers==1.1.1",
    "ipywidgets==8.1.1",
    "jupyter==1.0.0",
    "jupyter_client==8.6.3",
    "langgraph-api==0.4.46",
    "langgraph-cli==0.4.4",
    "jupyter_core==5.9.1",
    "langchain==1.0.2",
    "langchain-core==1.0.1",
    "langchain-openai==1.0.1",
    "langchain-postgres==0.0.16",
    "langchain-text-splitters==1.0.0",
    "langgraph==1.0.1",
    "langgraph-checkpoint==3.0.0",
    "langgraph-prebuilt==1.0.1",
    "langgraph-sdk==0.2.9",
    "langsmith==0.4.38",
    "nest-asyncio==1.6.0",
    "networkx==3.5",
    "openai==2.6.1",
    "packaging==25.0",
    "pgvector==0.3.6",
    "prompt_toolkit==3.0.52",
    "pydantic==2.12.3",
    "pydantic-settings==2.11.0",
    "pydantic_core==2.41.4",
    "python-dotenv==1.1.1",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "sentence-transformers==5.1.2",
    "SQLAlchemy==2.0.44",
    "tiktoken==0.12.0",
    "tokenizers==0.22.1",
    "transformers==4.57.1",
    "uvicorn==0.38.0",
]